Fix SonarQube issues: replace Collectors.toList, reduce complexity, cleanup services