@@ -3,11 +3,7 @@ package com.jean.servesmart.restaurant.service.impl;
 import com.jean.servesmart.restaurant.dto.reservation.ReservationCreateDto;
 import com.jean.servesmart.restaurant.dto.reservation.ReservationResponseDto;
 import com.jean.servesmart.restaurant.dto.reservation.ReservationUpdateDto;
-import com.jean.servesmart.restaurant.exception.reservation.ReservationInvalidDataException;
-import com.jean.servesmart.restaurant.exception.reservation.ReservationNotFoundException;
-import com.jean.servesmart.restaurant.exception.reservation.ReservationStatusNotFoundException;
-import com.jean.servesmart.restaurant.exception.reservation.ReservationTableNotFoundException;
-import com.jean.servesmart.restaurant.exception.reservation.ReservationTimeSlotUnavailableException;
+import com.jean.servesmart.restaurant.exception.reservation.*;
 import com.jean.servesmart.restaurant.model.Reservation;
 import com.jean.servesmart.restaurant.model.ReservationStatus;
 import com.jean.servesmart.restaurant.model.RestaurantTable;
@@ -21,7 +17,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -44,54 +39,27 @@ public class ReservationImpl implements ReservationService {
 
     @Override
     public ReservationResponseDto create(ReservationCreateDto dto) {
-
-        if (dto == null) {
-            throw new ReservationInvalidDataException();
-        }
-
-        if (dto.getRestaurantTableId() == null) {
-            throw new ReservationInvalidDataException("Table id is required");
-        }
-
-        if (dto.getFullName() == null || dto.getFullName().isBlank()) {
-            throw new ReservationInvalidDataException("Full name is required");
-        }
-
-        if (dto.getPartySize() == null || dto.getPartySize() <= 0) {
-            throw new ReservationInvalidDataException("Party size must be positive");
-        }
-
-        if (dto.getEventDateTime() == null) {
-            throw new ReservationInvalidDataException("Event date/time is required");
-        }
+        validateCreate(dto);
 
         RestaurantTable table = tableRepo.findById(dto.getRestaurantTableId())
                 .orElseThrow(ReservationTableNotFoundException::new);
 
-        LocalDateTime eventDateTime = dto.getEventDateTime();
-
-        if (reservationRepo.existsByRestaurantTable_IdAndEventDateTime(table.getId(), eventDateTime)) {
+        if (reservationRepo.existsByRestaurantTable_IdAndEventDateTime(
+                table.getId(), dto.getEventDateTime())) {
             throw new ReservationTimeSlotUnavailableException();
         }
 
-        String statusName = dto.getStatusName();
-        if (statusName == null || statusName.isBlank()) {
-            statusName = DEFAULT_STATUS;
-        }
-
-        ReservationStatus status = statusRepo.findByName(statusName)
-                .orElseThrow(ReservationStatusNotFoundException::new);
+        ReservationStatus status = resolveStatus(dto.getStatusName());
 
         Reservation r = new Reservation();
         r.setRestaurantTable(table);
         r.setFullName(dto.getFullName().trim());
         r.setPartySize(dto.getPartySize());
         r.setPhoneNumber(dto.getPhoneNumber());
-        r.setEventDateTime(eventDateTime);
+        r.setEventDateTime(dto.getEventDateTime());
         r.setStatus(status);
 
-        Reservation saved = reservationRepo.save(r);
-        return toResponse(saved);
+        return toResponse(reservationRepo.save(r));
     }
 
     @Override
@@ -113,93 +81,129 @@ public class ReservationImpl implements ReservationService {
         return reservationRepo.findByStatus_Name(statusName.trim())
                 .stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<ReservationResponseDto> getByTableAndDateRange(Integer tableId, LocalDateTime start, LocalDateTime end) {
+    public List<ReservationResponseDto> getByTableAndDateRange(
+            Integer tableId, LocalDateTime start, LocalDateTime end) {
+
         if (tableId == null || start == null || end == null) {
             throw new ReservationInvalidDataException();
         }
 
-        return reservationRepo.findByRestaurantTable_IdAndEventDateTimeBetween(tableId, start, end)
+        return reservationRepo
+                .findByRestaurantTable_IdAndEventDateTimeBetween(tableId, start, end)
                 .stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public ReservationResponseDto update(Integer id, ReservationUpdateDto dto) {
-        if (id == null || dto == null) {
-            throw new ReservationInvalidDataException();
-        }
+        validateUpdate(id, dto);
 
         Reservation r = reservationRepo.findById(id)
                 .orElseThrow(ReservationNotFoundException::new);
 
-        if (dto.getRestaurantTableId() != null) {
-            RestaurantTable table = tableRepo.findById(dto.getRestaurantTableId())
-                    .orElseThrow(ReservationTableNotFoundException::new);
+        updateTable(r, dto);
+        updateName(r, dto);
+        updatePartySize(r, dto);
+        updatePhone(r, dto);
+        updateEventTime(r, dto);
+        updateStatus(r, dto);
 
-            r.setRestaurantTable(table);
-        }
-
-        if (dto.getFullName() != null) {
-            if (dto.getFullName().isBlank()) {
-                throw new ReservationInvalidDataException("Full name cannot be blank");
-            }
-            r.setFullName(dto.getFullName().trim());
-        }
-
-        if (dto.getPartySize() != null) {
-            if (dto.getPartySize() <= 0) {
-                throw new ReservationInvalidDataException("Party size must be positive");
-            }
-            r.setPartySize(dto.getPartySize());
-        }
-
-        if (dto.getPhoneNumber() != null) {
-            r.setPhoneNumber(dto.getPhoneNumber());
-        }
-
-        if (dto.getEventDateTime() != null) {
-            LocalDateTime newEvent = dto.getEventDateTime();
-            // check dubbel geboekt
-            if (reservationRepo.existsByRestaurantTable_IdAndEventDateTime(
-                    r.getRestaurantTable().getId(), newEvent)) {
-                throw new ReservationTimeSlotUnavailableException();
-            }
-            r.setEventDateTime(newEvent);
-        }
-
-        if (dto.getStatusName() != null) {
-            if (dto.getStatusName().isBlank()) {
-                throw new ReservationInvalidDataException("Status name cannot be blank");
-            }
-
-            ReservationStatus status = statusRepo.findByName(dto.getStatusName().trim())
-                    .orElseThrow(ReservationStatusNotFoundException::new);
-
-            r.setStatus(status);
-        }
-
-        Reservation updated = reservationRepo.save(r);
-        return toResponse(updated);
+        return toResponse(reservationRepo.save(r));
     }
 
     @Override
     public boolean delete(Integer id) {
-        if (id == null) {
-            throw new ReservationInvalidDataException();
-        }
-
-        if (!reservationRepo.existsById(id)) {
+        if (id == null || !reservationRepo.existsById(id)) {
             throw new ReservationNotFoundException();
         }
-
         reservationRepo.deleteById(id);
         return true;
+    }
+
+    private void validateCreate(ReservationCreateDto dto) {
+        if (dto == null
+                || dto.getRestaurantTableId() == null
+                || dto.getFullName() == null
+                || dto.getFullName().isBlank()
+                || dto.getPartySize() == null
+                || dto.getPartySize() <= 0
+                || dto.getEventDateTime() == null) {
+            throw new ReservationInvalidDataException();
+        }
+    }
+
+    private void validateUpdate(Integer id, ReservationUpdateDto dto) {
+        if (id == null || dto == null) {
+            throw new ReservationInvalidDataException();
+        }
+    }
+
+    private ReservationStatus resolveStatus(String statusName) {
+        String name = statusName == null || statusName.isBlank()
+                ? DEFAULT_STATUS
+                : statusName.trim();
+
+        return statusRepo.findByName(name)
+                .orElseThrow(ReservationStatusNotFoundException::new);
+    }
+
+    private void updateTable(Reservation r, ReservationUpdateDto dto) {
+        if (dto.getRestaurantTableId() == null) return;
+
+        RestaurantTable table = tableRepo.findById(dto.getRestaurantTableId())
+                .orElseThrow(ReservationTableNotFoundException::new);
+        r.setRestaurantTable(table);
+    }
+
+    private void updateName(Reservation r, ReservationUpdateDto dto) {
+        if (dto.getFullName() == null) return;
+        if (dto.getFullName().isBlank()) {
+            throw new ReservationInvalidDataException("Full name cannot be blank");
+        }
+        r.setFullName(dto.getFullName().trim());
+    }
+
+    private void updatePartySize(Reservation r, ReservationUpdateDto dto) {
+        if (dto.getPartySize() == null) return;
+        if (dto.getPartySize() <= 0) {
+            throw new ReservationInvalidDataException("Party size must be positive");
+        }
+        r.setPartySize(dto.getPartySize());
+    }
+
+    private void updatePhone(Reservation r, ReservationUpdateDto dto) {
+        if (dto.getPhoneNumber() != null) {
+            r.setPhoneNumber(dto.getPhoneNumber());
+        }
+    }
+
+    private void updateEventTime(Reservation r, ReservationUpdateDto dto) {
+        if (dto.getEventDateTime() == null) return;
+
+        if (reservationRepo.existsByRestaurantTable_IdAndEventDateTime(
+                r.getRestaurantTable().getId(), dto.getEventDateTime())) {
+            throw new ReservationTimeSlotUnavailableException();
+        }
+
+        r.setEventDateTime(dto.getEventDateTime());
+    }
+
+    private void updateStatus(Reservation r, ReservationUpdateDto dto) {
+        if (dto.getStatusName() == null) return;
+        if (dto.getStatusName().isBlank()) {
+            throw new ReservationInvalidDataException("Status name cannot be blank");
+        }
+
+        ReservationStatus status = statusRepo.findByName(dto.getStatusName().trim())
+                .orElseThrow(ReservationStatusNotFoundException::new);
+
+        r.setStatus(status);
     }
 
     private ReservationResponseDto toResponse(Reservation r) {
